# mygwagn

./: .gitignore  README.md  pyproject.toml
examples/palmese21/: ReadMe.md  lambda.py  lambda_compare_likelihoods.py  plot_stats.py
src/mygwagn/inference/: palmese21.py
src/mygwagn/io/: paths.py
